crates/llvmkit-ir/tests/compile_fail/cross_module_select_arm.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/cross_module_select_arm.rs:34:21
   |
19 |         let left_arm = left_builder
   |             -------- `left_arm` declared here, outside of the closure body
...
22 |         Module::with_new::<_, _, _>("right", |right| {
   |                                               ----- `right` is a reference that is only valid in the closure body
...
34 |             let _ = builder.build_select(cond, left_arm, right_arm, "bad");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `right` escapes the closure body here
   |
   = note: requirement occurs because of the type `IntValue<'_, i32, Brand<'_>>`, which makes the generic argument `Brand<'_>` invariant
   = note: the struct `IntValue<'ctx, W, B>` is invariant over the parameter `B`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/cross_module_select_arm.rs:30:27
   |
12 |     Module::with_new::<_, _, _>("left", |left| {
   |                                          ----
   |                                          |
   |                                          `left` is a reference that is only valid in the closure body
   |                                          has type `Module<'1>`
...
30 |             let builder = IRBuilder::new_for::<i32>(&right).position_at_end(entry);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                           |
   |                           `left` escapes the closure body here
   |                           argument requires that `'1` must outlive `'static`
